[package]
name = "chess_app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.9"
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "clipboard-all", "dialog-all", "shell-open", "dialog", "clipboard"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.11.9"
prost-types = "0.11.9"
bytes = "1.4.0"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
